<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="4"
    android:orientation="horizontal"
    tools:context="com.example.calculadora.MainActivity" >

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="5"
        android:text="@string/pantalla" />

    <Button
        android:id="@+id/btn7"
        android:text="@string/btn7" />
    
    <Button
        android:id="@+id/btn8"
        android:text="@string/btn8" />
    
    <Button
        android:id="@+id/btn9"
        android:text="@string/btn9" />
    
    <Button
        android:id="@+id/btnMas"
        android:text="@string/btnMas" />
    
    <Button
        android:id="@+id/btn4"
        android:text="@string/btn4" />
    
    <Button
        android:id="@+id/btn5"
        android:text="@string/btn5" />
    
    <Button
        android:id="@+id/btn6"
        android:text="@string/btn6" />
    
    <Button
        android:id="@+id/btnResta"
        android:text="@string/btnResta" />
    
    <Button
        android:id="@+id/btn1"
        android:text="@string/btn1" />
    
    <Button
        android:id="@+id/btn2"
        android:text="@string/btn2" />
    
    <Button
        android:id="@+id/btn3"
        android:text="@string/btn3" />
    
    <Button
        android:id="@+id/btnMulti"
        android:text="@string/btnMulti" />
    
    <Button
        android:id="@+id/btn0"
        android:text="@string/btn0" />
    
    <Button
        android:id="@+id/btnIgual"
        android:text="@string/btnIgual" />
    
    <Button
        android:id="@+id/btnPunto"
        android:text="@string/btnPunto" />
    
    <Button
        android:id="@+id/btnDivide"
        android:text="@string/btnDivide" />

</GridLayout>
